# test-rust-bioinformatics-io

./: Cargo.toml  readme.md
benches/: 01_fa_bench.rs  02_fq_bench.rs  03_bam_bench.rs
reports/: bam_benchmarks.md  datasets.md  environment.md  fastx_benchmarks.md  fastx_plots.md
src/: bam_parser.rs  fasta_parser.rs  fastq_parser.rs  lib.rs  utils.rs
tests/: test_01_fa_bench.rs  test_02_fq_bench.rs  test_03_bam_bench.rs
