[package]
name = "test-bioinformatics-io"
version = "0.1.0"
edition = "2024"

[dependencies]
bam = "0.1.4"
bio = "3.0.0"
kseq = "0.5.3"
noodles-fasta = "0.57.0"
noodles-fastq = "0.21.0"
seq_io = "0.3.4"

# avoid C binding
fxread = { version = "0.2.14", default-features = false }
fastq = { version = "0.6.0", default-features = false }
needletail = { version = "0.6.3", default-features = false, features = ["flate2"] }
flate2 = { version = "1.1.5", default-features = false, features = ["zlib-rs"] }


[dev-dependencies]
criterion = "0.8.0"

# [[bench]]
# name = "01_fa_bench"
# harness = false

[[bench]]
name = "02_fq_bench"
harness = false

